OPHYK-1113 fix warnings and deprecations